Issue #930 - Slow data channels with big batch download.
Fixed ClientTransport schedulers init/shutdown.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>